<resources>
    <string name="app_name">Cookie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailHint">Enter the email</string>
    <string name="passwordHint">Enter the password</string>
    <string name="login">Sign In</string>
    <string name="fullName">Full Name</string>
    <string name="registration">Sign Up</string>
    <string name="google">Google</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="description">Description</string>
    <string name="country">Country</string>
    <string name="favorite">Favorite</string>
    <string name="randomMeal">Daily Inspiration</string>
    <string name="fav_meals">Favorite Meals</string>
    <string name="setting">Settings</string>
    <string name="ingredients">Ingredients</string>
    <string name="youtube">YouTube</string>
    <string name="steps">Steps</string>
    <string name="searchbyname">search by name</string>
    <string name="searchIngredient">Search by Ingredient</string>
    <string name="searchCountry">Search by Country</string>
    <string name="view_all">View All</string>
    <string name="date">Date</string>
    <string name="planner">Your Plan</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="or">__________________________Or__________________________</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="your_favourite_meal_list">Your favourite Meal List</string>
    <string name="sign_out">Sign Out</string>
    <string name="theme">Dark Mode</string>
    <string name="edit_account">Edit account</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Fill your information below or register with your social account.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="re_enter_the_password">Re-enter the password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_as_guest">Login as Guest</string>

    <string-array name="flags">
        <item>https://www.worldometers.info/img/flags/us-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/uk-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ca-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ch-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/hr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/nl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/eg-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/fi-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/fr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/gr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/in-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ei-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/it-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/jm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ja-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ke-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/my-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mx-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mo-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/pl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/po-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/rs-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/sp-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/th-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ts-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/tu-flag.gif</item>
        <item>https://www.freepnglogos.com/uploads/globe-png/globe-icon-aquanox-icons-softiconsm-34.png</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>
    </string-array>
</resources>