<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".authentication.view.SignUpFragment">
    <View
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@drawable/app_bar_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/create_account"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/icon"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="RtlCompat" />

    <View
        android:id="@+id/view"
        android:layout_width="413dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/layout_shape"
        android:foregroundGravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/fullName"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/fullNameEditView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fullNameEditView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/mail_24px"
        android:drawablePadding="16dp"
        android:paddingStart="8dp"
        android:ems="10"
        android:hint="@string/fullName"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailEditView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/mail_24px"
        android:drawablePadding="16dp"
        android:paddingStart="8dp"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/fullNameEditView"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordSignUpEditView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/lock_24px"
        android:drawableEnd="@drawable/visibility_24px"
        android:drawablePadding="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/emailEditView"
        app:layout_constraintStart_toStartOf="@+id/emailEditView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/emailEditView"  />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_password"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/passwordSignUpEditView" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/lock_24px"
        android:drawableEnd="@drawable/visibility_24px"
        android:drawablePadding="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:ems="10"
        android:hint="@string/re_enter_the_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignUpEditView"
        app:layout_constraintStart_toStartOf="@+id/passwordSignUpEditView"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signUpBtn"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordSignUpEditView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBarSignUp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toStartOf="@+id/textView12"
                app:layout_constraintTop_toTopOf="@+id/textView12"
                app:layout_constraintVertical_bias="0.75" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="136dp"
                android:text="@string/registration"
                android:textColor="@color/white"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.478" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="346dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/or"
        android:textAlignment="center"
        android:textColor="@color/icon"
        app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/signUpBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/googleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/icons8_google"
        app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        app:layout_constraintTop_toTopOf="@+id/circleImageView"
        app:layout_constraintVertical_bias="0.0" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/icons8_facebook"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="220dp"
        android:src="@drawable/icons8_twitterx"
        app:civ_border_color="@color/icon"
        app:layout_constraintBottom_toBottomOf="@+id/googleBtn"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toTopOf="@+id/googleBtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="16dp"
        android:text="@string/have_an_account"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView3" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/editText"
        app:layout_constraintTop_toTopOf="@+id/editText"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/guestMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_as_guest"
        android:textSize="16sp"
        android:textColor="@color/text"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

</androidx.constraintlayout.widget.ConstraintLayout>